# GameEngine

./: .gitignore  CmakeLists.txt  cmakewatcher.c  installcmakeifitsnotinstalled.txt  main.c  readme.md  start.py
Archive/: GameEngine.sln  Readme.ms  build.bat
Archive/GameEngine/: GameEngine.cpp
Archive/engine/: main.cpp  packages.config
Archive/engineLib/: Engine.cpp  Engine.h  ExecutableAllocator.h
GameEngine/: GameEngine.rc  GameEngine.vcxproj  Resource.h
engine/: Library.cpp  Library.h  engine.vcxproj  main.cpp
engine/core/: CMakeLists.txt
engineLib/: Engine.cpp  Engine.h  engineLib.vcxproj  packages.config
launcher/: CMakeLists.txt
